@@ -505,6 +505,9 @@ Release 0.21.0 - Unreleased
     HDFS-995.  Replace usage of FileStatus#isDir().  (Eli Collins via
     tomwhite)
 
+    HDFS-1161.  Make DN minimum valid volumes configurable.
+    (Eli Collins via tomwhite)
+
   OPTIMIZATIONS
 
     HDFS-946. NameNode should not return full path name when lisitng a
